--- a/css/style.css
+++ b/css/style.css
@@ -1,164 +1,298 @@
-*{
-    padding: 0;
-    margin: 0;
-}
-@font-face {
-    font-family: "CrimsonText-Regular";
-    src: url(../font/CrimsonText-Regular.ttf);
-}
-body{
-    font-family: "CrimsonText-Regular";
-    background-color: #e2e7ee;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-h1{
-    margin-top: 30px;
-    margin-left: -400px;
-    box-sizing: content-box;
-    font-size: 2em;
-    text-align: start;
-}
-.logo{
-    padding: 5px;
-    width: 100px;
-    height: 100px;
-    border-radius: 40%;
-    vertical-align:0%;
-    align-items: start;
-    margin-top: 10px;
-}
-ul{
-    padding: 0;
-    margin: 0;
-    text-align: right;
-}
-li{
-    display: inline-block;
-    padding: 10px;
-    padding-bottom: 80px;   
-}
-a{
-    color: white;
-    font-size: 1.5rem;
-    text-decoration: none;
-    box-sizing: content-box;
-}
-nav{
-    display: grid;
-    list-style-type: none;
-    text-align: right;
-    align-items:last baseline;
-    box-sizing: content-box;
-    grid-area: nav;
-}
-.epigrafe{
-    text-align: center;
-    font-size: 1.3rem ;
-    margin: 20px;
-    margin-top: -30px;
-    display: flex;
+body {
+  font-family: "CrimsonText-Regular";
+  background-color: #e2e7ee;
+  padding: 0;
+  margin: 0;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 0.1fr 0.1fr 0.1fr 0.1fr;
+  gap: 0px 0px;
+  grid-auto-flow: row;
+  grid-template-areas: "header header header" "section1 section1 section1" "section2 section3 section4" "footer footer  footer";
 }
 
-h3{
-    font-size: 1.5rem;
-    text-align: center;
-    padding-inline: 200px;
-    margin-top: 30px;
-    box-sizing: content-box;
+header {
+  display: grid;
+  grid-template-columns: 1fr 0.5fr 1.5fr;
+  gap: 0px 0px;
+  grid-auto-flow: row;
+  grid-template-areas: ". . nav" ". . ." ". . .";
+  background-color: #041619;
+  font-family: "CrimsonText-Regular";
+  grid-area: header;
 }
-footer{
-    background-color: #041619;
-    text-align: start;
-    color: white;
-    grid-area: footer;
+header a {
+  color: white;
+  font-size: 1.5rem;
+  text-decoration: none;
+  box-sizing: content-box;
+}
+header .logo {
+  align-items: start;
+  vertical-align: 0%;
+  padding: 5px;
+  width: 100px;
+  height: 100px;
+  border-radius: 40%;
+  margin-top: 10px;
+}
+header h1 {
+  margin-top: 30px;
+  margin-left: -400px;
+  box-sizing: content-box;
+  font-size: 2em;
+  text-align: start;
+}
+header nav .nav-link {
+  color: #e2e7ee;
+  --bs-nav-link-hover-color: #e2e7ee;
+  font-size: 2.5rem;
+  transform: translate(410px, -10px);
+}
+header nav .nav-pills {
+  --bs-nav-pills-link-active-bg: #041619;
+  --bs-nav-pills-link-active-color: #e2e7ee;
 }
 
-.contenedor {  
-    padding: 0;
-    margin: 0;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows:  0.1fr 0.1fr 1.4fr 0.5fr;
+.section1 {
+  grid-area: section1;
+}
+.section1 .parrafo {
+  text-align: center;
+  font-size: 1.5rem;
+  padding: 20px;
+  line-height: 1.5;
+  border: black 5px solid;
+  margin-top: 10px;
+}
+
+.section2 {
+  grid-area: section2;
+}
+.section2 h3 {
+  font-size: 1.5rem;
+  text-align: center;
+  padding-inline: 200px;
+  margin-top: 30px;
+  box-sizing: content-box;
+}
+.section2 .imginicio {
+  width: 420px;
+  height: 420px;
+  margin: 20px;
+  margin-top: -10px;
+  padding: 20px;
+  box-sizing: content-box;
+}
+.section2 .epigrafe {
+  text-align: center;
+  font-size: 1.3rem;
+  margin: 20px;
+  margin-top: -30px;
+  display: flex;
+}
+.section2 .imggaleria {
+  width: 505px;
+  height: 1000px;
+  box-sizing: content-box;
+}
+.section2 .img-circle {
+  width: 300px;
+  height: 300px;
+  background-size: cover;
+  border-radius: 50%;
+  margin-top: 10px;
+  margin-left: 90px;
+}
+.section2 .epigrafe2 {
+  text-align: center;
+  font-size: 1.2rem;
+  margin: 20px;
+  margin-top: -10px;
+  display: flex;
+}
+
+.section3 {
+  grid-area: section3;
+}
+.section3 h3 {
+  font-size: 1.5rem;
+  text-align: center;
+  padding-inline: 200px;
+  margin-top: 30px;
+  box-sizing: content-box;
+}
+.section3 .imginicio {
+  width: 420px;
+  height: 420px;
+  margin: 20px;
+  margin-top: -10px;
+  padding: 20px;
+  box-sizing: content-box;
+}
+.section3 .epigrafe {
+  text-align: center;
+  font-size: 1.3rem;
+  margin: 20px;
+  margin-top: -30px;
+  display: flex;
+}
+.section3 .imggaleria {
+  width: 505px;
+  height: 1000px;
+  box-sizing: content-box;
+}
+.section3 .img-circle {
+  width: 300px;
+  height: 300px;
+  background-size: cover;
+  border-radius: 50%;
+  margin-top: 10px;
+  margin-left: 90px;
+}
+.section3 .epigrafe2 {
+  text-align: center;
+  font-size: 1.2rem;
+  margin: 20px;
+  margin-top: -10px;
+  display: flex;
+}
+
+.section4 {
+  grid-area: section4;
+}
+.section4 h3 {
+  font-size: 1.5rem;
+  text-align: center;
+  padding-inline: 200px;
+  margin-top: 30px;
+  box-sizing: content-box;
+}
+.section4 .imginicio {
+  width: 420px;
+  height: 420px;
+  margin: 20px;
+  margin-top: -10px;
+  padding: 20px;
+  box-sizing: content-box;
+  align-items: center;
+}
+.section4 .epigrafe {
+  text-align: center;
+  font-size: 1.3rem;
+  margin: 20px;
+  margin-top: -30px;
+  display: flex;
+}
+.section4 .imggaleria {
+  width: 505px;
+  height: 1000px;
+  box-sizing: content-box;
+}
+.section4 .img-circle {
+  width: 300px;
+  height: 300px;
+  background-size: cover;
+  border-radius: 50%;
+  margin-top: 10px;
+  margin-left: 90px;
+}
+.section4 .epigrafe2 {
+  text-align: center;
+  font-size: 1.2rem;
+  margin: 20px;
+  margin-top: -10px;
+  display: flex;
+}
+
+footer {
+  background-color: #041619;
+  text-align: start;
+  color: white;
+  grid-area: footer;
+}
+
+@media screen and (min-width: 576px) and (max-width: 767px) {
+  body {
+    grid-template-columns: 1fr;
+    grid-template-rows: 0.1fr 0.1fr 0.1fr 0.1fr 0.1fr 0.1fr;
     gap: 0px 0px;
     grid-auto-flow: row;
-    grid-template-areas:
-      "header header header"
-      "section1 section1 section1"
-      "section2 section3 section4"
-      "footer footer  footer";
+    grid-template-areas: "header " "section1" "section2 " "section3" "section4" "footer";
   }
-  .parrafo{
-    text-align: center;
-    font-size: 1.5rem;
-    padding: 20px;
-    line-height: 1.5;
-    border: black 5px solid;
-    margin-top: 10px;
-    
+  header h1 {
+    margin-top: 0px;
+    margin-left: -85px;
+  }
+  header nav .nav-link {
+    transform: translatex(70px);
+  }
+  header nav .inicio {
+    display: none;
+  }
+  .section2 .imggaleria {
+    width: 100%;
+    height: 1000px;
+    box-sizing: content-box;
+  }
+  .section2 .img-circle {
+    margin-left: 139px;
+  }
+  .section2 .imginicio {
+    margin-left: 55px;
+  }
+  .section4 .imggaleria {
+    width: 100%;
+    height: 1000px;
+    box-sizing: content-box;
+  }
+  .section4 .img-circle {
+    margin-left: 139px;
+  }
+  .section4 .imginicio {
+    margin-left: 55px;
+  }
+  .section3 .imggaleria {
+    width: 100%;
+    height: 1000px;
+    box-sizing: content-box;
+  }
+  .section3 .img-circle {
+    margin-left: 139px;
+  }
+  .section3 .imginicio {
+    margin-left: 55px;
+  }
 }
-.img-circle{
-    width: 300px;
-    height: 300px;
-    background-size: cover;
-    border-radius: 50%;
-    margin-top: 10px;
-    margin-left: 90px;
-    
-}
-
-  
-.header {  display: grid;
-    grid-template-columns: 1fr 0.5fr 1.5fr;
+@media screen and (min-width: 767px) and (max-width: 992px) {
+  body {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 0.1fr 0.1fr 0.1fr 0.1fr 0.1fr;
     gap: 0px 0px;
     grid-auto-flow: row;
-    grid-template-areas:
-      ". . nav"
-      ". . ."
-      ". . .";
-    background-color: #041619;
-    font-family: "CrimsonText-Regular";
-    grid-area: header;
-}
-  
-  .section1 {  grid-area: section1;}
-  
-  .section2 { grid-area: section2; }
-  
-  .section3 { grid-area: section3; }
-
-  .section4 { grid-area: section4;}
-  
-.imginicio{
-    width: 420px;
-    height: 420px;
-    margin: 20px;
-    margin-top: -10px;
-    padding: 20px;
-    box-sizing:content-box
-    
+    grid-template-areas: "header header" "section1 section1" "section2 section3" "section4 section4" "footer footer";
+  }
+  header h1 {
+    margin-left: -230px;
+  }
+  header nav .nav-link {
+    transform: translate(130px, 20px);
+  }
+  .section4 .imginicio {
+    margin-left: 255px;
+  }
+  .section4 .imggaleria {
+    width: 100%;
+  }
+  .section4 .img-circle {
+    margin-left: 309px;
+  }
 }
 
-@media screen and (max-width:500px){
-    .contenedor{
-     grid-template-columns: 0.5fr 0.5fr;
-     grid-template-rows: 0.5fr 0.5fr 0.5fr 0.5fr;
-     grid-template-areas:
-       "header"
-       "section1"
-       "section2"
-       "section3"
-        "section4" 
-       "footer";
-     }
-     .parrafo{
-        text-align: center;
-        font-size: 1.5rem;
-        padding-top: 200px;
-        padding-bottom: 200px;
-     }
-     h1{
-        margin-left: -160px;
-        margin-top: 100px;
-     }
- 
- }
+/*# sourceMappingURL=style.css.map */
